# camera-trap-geolocation

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  HISTORY.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_worked_example.ipynb
scripts/: detect_geolocate.py  detect_geolocate_pybioclip.py  detect_geolocate_sahi_openclip.py
src/camera_trap_geolocation/: __init__.py  geometry.py  io_utils.py  timestamps.py
tests/: conftest.py  test_geometry.py  test_timestamps.py
